<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.RuleEditorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/custom_rule_editor_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_rule_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="120"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/custom_rule_enabled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/custom_rule_phase"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

            <Spinner
                android:id="@+id/spinnerPhase"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_target_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/custom_rule_contexts"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/custom_rule_context_main" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/custom_rule_context_share" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBrowser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/custom_rule_context_browser" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/custom_rule_scope"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

            <Spinner
                android:id="@+id/spinnerScope"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_target_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutScopeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_rule_scope_value">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editScopeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_rule_excludes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editExcludes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/custom_rule_action"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

            <Spinner
                android:id="@+id/spinnerAction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_target_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutActionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_rule_action_value">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editActionValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutReplacement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_rule_replacement"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editReplacement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerDecodeMode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_target_size"
                android:visibility="gone" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkIgnoreCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_rule_ignore_case" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkReplaceAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_rule_replace_all"
                android:visibility="gone" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_rule_stop" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_rule_test_lab"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/custom_rule_test_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTestUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_rule_test_profile"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <Spinner
                android:id="@+id/spinnerTestProfile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_target_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRunTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_rule_test" />

            <TextView
                android:id="@+id/textTestResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:textIsSelectable="true"
                android:visibility="gone"
                tools:text="Result" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonDelete"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_rule_delete"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonDuplicate"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_rule_duplicate"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
