<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_large"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:paddingBottom="@dimen/padding_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_max_entries"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginBottom="@dimen/margin_large" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_entries_hint"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMaxEntries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClose"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginEnd="@dimen/margin_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOk"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout> 